# reiComfigerManager

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/software/: page.tsx
app/software/[id]/: page.tsx
components/config-editor/: AliasEditor.tsx  ConfigEditor.tsx  EnvironmentVariableEditor.tsx  PathEditor.tsx  SoftwareConfigEditor.tsx  VersionHistory.tsx
components/layout/: Navigation.tsx
components/software/: CategoryFilter.tsx  SoftwareCard.tsx
components/ui/: AutoCompleteInput.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DiffViewer.tsx  EditModal.tsx  ToastContainer.tsx
lib/: environment-variables-knowledge.ts  environment-variables.ts  path-service.ts  software-definitions.ts  toast.tsx  zsh-parser-test.js  zsh-parser.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  mod.rs  path.rs  software.rs  version.rs
src-tauri/src/software/: definitions.rs  detector.rs  mod.rs  parser.rs
src-tauri/src/storage/: mod.rs  preferences.rs  version_storage.rs
src-tauri/src/version/: manager.rs  mod.rs
types/: software.ts
